# python-basics-jornada-de-dados

./: main.py
mod01-configuration/: README.md
mod02-python/aula-01/: main.py
mod02-python/classes-01/: challenge.py
mod02-python/classes-02/: .exercises-03-str.py.swp  .exercises-05-try-except.py.swp  challenge-classes-02.py  exercises-01-int.py  exercises-02-float.py  exercises-03-str.py  exercises-04-bool.py  exercises-05-try-except.py  main.py
projeto_django/: pyproject.toml
