[project]
name = "projeto-django"
version = "0.1.0"
description = ""
authors = [
    {name = "Vinicius Silva",email = "ss0vinicius@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
